SpaceObjectType fun and Optional refactoring.